[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Game_modes/ZombieMod/ZombieMod.gd" type="Script" id=1]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sfx/zm/spawn.ogg" type="AudioStream" id=3]

[node name="ZombieMod" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.5
margin_top = -177.497
margin_right = 266.5
margin_bottom = -136.497
custom_fonts/font = ExtResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="round_start_dl" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="restart_delay" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="roundStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="round_start_dl" to="." method="_on_round_start_dl_timeout"]
[connection signal="timeout" from="restart_delay" to="." method="_on_restart_delay_timeout"]
